footer format fix on mobile spaces mobile for video pages

--- a/src/assets/scss/pages/_single-post.scss
+++ b/src/assets/scss/pages/_single-post.scss
@@ -22,7 +22,7 @@
     padding: px2rem(30px) 0 px2rem(0px);
 
     @include mq("medium") {
-      padding: px2rem(80px) 0 px2rem(50px);
+      padding: px2rem(0px) 0 px2rem(50px);
     }
 
     &--style-1 {
